# automo-web-app

./: .dockerignore  .env.dev  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  SPEC.md  docker-compose.yml  manage.ps1  project_structure.txt  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.mjs
client/src/: App.tsx
client/src/@types/: auth.ts
client/src/components/Common/: DataTable.tsx
client/src/components/Forecast/: ForecastChart.tsx
client/src/components/Layout/: Layout.tsx
client/src/components/UserPopOver/: CollapsedUserPopOverContent.tsx  PopOverTargetContent.tsx  UserPopOver.tsx
client/src/configs/: app.config.ts
client/src/configs/navigation.config/: index.tsx
client/src/configs/routes.config/: routes.config.ts  search.config.ts
client/src/constants/: api.constant.ts
client/src/pages/auth/: SignIn.tsx  SignUp.tsx
client/src/pages/chatbot/: Chatbot.tsx
client/src/pages/detection/: Detection.tsx
client/src/pages/main/: Analytics.tsx  Home.tsx  Search.tsx  Settings.tsx  home.module.css
client/src/route/: AuthorityCheck.tsx  ProtectedRoute.tsx
client/src/services/: ApiService.ts  BaseService.ts  DetectionService.ts  ForecastService.ts  OrderService.ts
inference/: Dockerfile  app.py  pyproject.toml  sanity_check.py
inference/models/best_int8_openvino_model/: best.xml  metadata.yaml
server/: app.py
server/models/: auto_reorder_model.pkl  user.py  vehicle_parts_inventory_.csv
server/routes/: aaa.py  bladeacer_sarima_ts.py  ft_obj_det.py
server/utils/: auth.py
tests/: test_api.py
(+14 files in other folders)
